# conversion-triage

./: README.md  pyproject.toml
src/conversion_triage/: __init__.py  cli.py
src/conversion_triage/engine/: __init__.py  any_llm_adapter.py  chunking.py  llm.py  merge.py  pipeline.py  rules.py  schemas.py
src/conversion_triage/transcripts/: __init__.py  base.py  youtube.py
src/conversion_triage/web/: __init__.py  app.py  routes.py
src/conversion_triage/web/static/: style.css
src/conversion_triage/web/templates/: index.html
tests/: test_any_llm_adapter.py  test_engine_pipeline.py  test_transcripts_youtube.py  test_web_uses_engine.py
