[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "conversion-triage"
version = "0.1.0"
description = "Library-first engine for triaging OCR/ASR conversion errors"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "jinja2>=3.1.0",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "ruff>=0.6.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "ruff>=0.6.0",
]

[project.scripts]
conversion-triage = "conversion_triage.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/conversion_triage"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
